# Newton-Fractals

./: CMakeLists.txt  To do
src/: Button.cpp  Button.h  Constants.h  FractalCanvas.cpp  FractalCanvas.h  NewtonFractal.cpp  NewtonFractal.h  Typedefs.h  main.cpp
src/gui/: Button.cpp  Button.h  Clickable.h  ClickablePanel.cpp  ClickablePanel.h  ControlCenter.h  FractalCanvas.cpp  FractalCanvas.h  ResolutionPicker.cpp  ResolutionPicker.h
